fix: bug where text in buttons were not centered in Safari

--- a/src/app/type-list/type-list.component.css
+++ b/src/app/type-list/type-list.component.css
@@ -1,4 +1,5 @@
 .type-list__button {
   width: auto;
   min-width: 90px;
+  display: inline-block;
 }
